--- a/package.json
+++ b/package.json
@@ -1,14 +1,7 @@
-{
-  "name": "finwise-app",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
-  }
+"dependencies": {
+  "next": "15.5.6",
+  "react": "18.2.0",
+  "cheerio": "^1.0.0",
+  "node-fetch": "^2.6.7",
+  "@google-cloud/vision": "^3.4.0"
 }
