--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "15.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.4.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "cheerio": "^1.0.0",
     "node-fetch": "^2.6.7",
     "@google-cloud/vision": "^3.4.0"
