--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "cheerio": "^1.0.0",
-    "node-fetch": "^2.6.7",
-    "@google-cloud/vision": "^3.4.0"
+    "node-fetch": "^2.6.7"
   }
 }
